# aoc

./: README.md
aoc2023/: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bash  buildvars.bash  runall.bash
aoc2023/.cache/clangd/index/: Main.cpp.E2FF2A49091C0F4C.idx  dummy.cpp.DCBBF7D36F866BF2.idx  dummy.cpp.DECDB84F1CC11035.idx
aoc2023/day1/: CMakeLists.txt  Main.cpp
aoc2023/day1.app/Contents/: Info.plist
aoc2023/day1.app/Contents/MacOS/: day1
aoc2023/include/: Aoc.hpp
